# CharAIface

./: .env.example  .gitignore  CHARPACK.md  README.md  pyproject.toml  requirements.txt  run_char_aiface-Backend.bat  run_char_aiface.bat  run_char_aiface.command  run_char_aiface.py  run_char_aiface.sh  run_macos.command  run_macos.sh  run_windows.bat  run_windows.ps1
Tools/: Generator.py  run_generator.command  run_generator.sh  run_generator_windows.bat
Tools/characters/: character_pack_archive.py
Tools/locales/: ui.csv
Tools/localization/: localization_manager.py
Tools/theme/: theme_manager.py  theme_model.py
Tools/ui/: animated_image_label.py  constants.py  main_window.py  preview_panel.py  reaction_timeline.py  styles.py
backend/app/: main.py
desktop/: app.py
desktop/characters/: character_ids.py  character_pack.py  character_pack_archive.py  character_registry.py  character_scanner.py
desktop/chat/: chat_session.py  session_store.py
desktop/client/: backend_http_client.py
desktop/core/: character_state.py  chat_exporter.py  export_filename_parser.py  file_reader.py  frontend_helper.py  manual_export_parser.py  system_status.py
desktop/localization/: localization_manager.py
packaging/: README.md  prepare_packaging_assets.py  pyinstaller_spec_common.py  verify_packaged_resources.py
scripts/: check_env.py  install_macos.sh  install_windows.ps1  run_char_aiface.bat  run_char_aiface.ps1  run_char_aiface.py  run_char_aiface.sh
shared/: file_intake.py  file_types.py  runtime_paths.py
tests/: test_web_search_trigger.py
(+78 files in other folders)
