[project]
name = "charaiface"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "charset-normalizer>=3.3",
    "fastapi>=0.115",
    "httpx>=0.27",
    "keyring>=25.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pillow>=10.0",
    "pygments>=2.18",
    "pydantic>=2.7",
    "pyside6>=6.7",
    "tree-sitter-language-pack>=0.9",
    "tree-sitter>=0.25",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
